file_explorer.css
.div-black-border {
	border: 3px solid #000000;
}

.div-lower-window-layout {
	display: grid;
	grid-template-columns: 30% 70%;
}

.div-file-window-layout {
	display: grid;
	grid-template-rows: 51px 524px;
}

.div-upper-window-layout {
	display: grid;
	grid-template-columns: 20% 60% 20%;
	grid-template-rows: 50px;
	justify-items: center;
	align-items: center;

	border: solid;
	border-width: 2px;
	border-color: black;
}

.dropdown-layout {
	position: relative;
	display: inline-block;
}

.grid-two-column {
	display: grid;
	grid-template-columns: 90% 10%;
}

li {
	display: grid;
	grid-template-columns: auto;
	grid-template-rows: 30px 100px;

	float: left;
	text-decoration: none;
	margin-left: 10px;
}

ul.file-folder {
	list-style-type: none;
	text-align: center; 
	display: inline;
}

.dropdown-arrow {
	height: 10px;
	width: 10px;

	border: solid;
	border-radius: 3px;
	border-width: 0px 3px 3px 0px;
	border-color: white;

	transition: 500ms;
	transform: rotate(45deg);

	margin-top: 6px;
}

.back-arrow {
	height: 15px;
	width: 15px;

	border: solid;
	border-radius: 3px;
	border-width: 0px 3px 3px 0px;
	border-color: white;

	transition: 500ms;
	transform: rotate(135deg);

	margin-left: 5px;

}

.back-container {
	display: grid;
	justify-items: center;
	align-items: center;

	height: 30px;
	width: 30px;

	border-radius: 5px;

	background-color: rgb(61, 60, 60);
}

.back-container:hover {
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

.icon-size-content {
	opacity: 0;
	position: absolute;
	background-color: rgb(61, 60, 60);
	min-width: 100%;

	pointer-events: none;
	
	transition: opacity 500ms;
	border-radius: 5px;

	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
	z-index: 1;
}

.border-hover:hover {
	border-color: white;
	border-radius: 5px;
	border: solid;
	border-width: 1px;

	cursor: pointer;
}

.dk-style {
	height: 25px;
	width: 90%;

	margin-top: 13px;
	margin-bottom: 13px;

	background-color: rgb(61, 60, 60);
	font-size: medium;
	font-weight: 300;
	color: white;
	
	border-radius: 5px;
	border: solid;
	border-width: 1px;
	border-color: rgb(92, 88, 88);
}

.dk-style:hover {
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

.center-current-location {
	position: relative;
}

